[metadata]
name = Chromos
url = "https://github.com/devanshshukla99/Chromos",
author = devanshshukla99
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = MIT
description = Package for getting colored text output in Python terminal.
long_description = file: README.md

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    pytest>=4.6

[flake8]
max-line-length = 110
